--- a/catalog/view/theme/mebeljepara/package.json
+++ b/catalog/view/theme/mebeljepara/package.json
@@ -24,5 +24,18 @@
     "gulp-rename": "^1.2.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0"
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fathur/mebeljepara.git"
+  },
+  "keywords": [
+    "jepara"
+  ],
+  "author": "Fathur Rohman <fathur_rohman17@yahoo.co.id>",
+  "bugs": {
+    "url": "https://github.com/fathur/mebeljepara/issues"
+  },
+  "homepage": "https://github.com/fathur/mebeljepara"
 }
