--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-install-old/
+.htaccess
+/config.php
+admin/config.php
+
+!index.html
+
+download/
+image/data/
 image/cache/
 system/cache/
+system/logs/
+install-old/
