--- a/catalog/view/theme/mebeljepara/package.json
+++ b/catalog/view/theme/mebeljepara/package.json
@@ -19,6 +19,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-jade": "^1.0.0",
     "gulp-less": "^3.0.1",
+    "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^0.5.1",
     "gulp-print": "^1.1.0",
     "gulp-rename": "^1.2.0",
